# cmake_template

./: .gitignore  CMakeLists.txt  README.md
hello_lib_example/: CMakeLists.txt  hello.c
inc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/aaa/: aaa.c
lib/foo/: CMakeLists.txt
lib/hello/: CMakeLists.txt
src/: CMakeLists.txt  main.c
